[package]
name = "appimage_builder"
version = "1.0.0"
edition = "2021"
license = "GPL-2.0-only"
authors = ["Michel Pastor <shellixyz@gmail.com>"]
rust-version = "1.64"
publish = false

[dependencies]
anyhow = "1.0.66"
cargo_toml = "0.13.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
indicatif = "0.17.6"
indoc = "1.0.7"
log = "0.4.17"
regex = "1.7.0"
reqwest = { version = "0.11.18", features = ["stream"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
which = "4.4.0"
